a11y fix: contrast

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -46,7 +46,7 @@
 .date {
   flex-shrink: 0;
   min-width: 120px;
-  color: rgb(153, 153, 153);
+  color: #595959;
   display: none;
   margin-top: 4px;
 }
